updated the google app deploy file

--- a/.github/workflows/Deploy to Google App Engine.yml
+++ b/.github/workflows/Deploy to Google App Engine.yml
@@ -22,6 +22,7 @@ jobs:
       uses: google-github-actions/deploy-appengine@v1.2.6
       with:
         deliverables: app.yaml 
+        version: v1
         project_id: ${{ secrets.GCP_PROJECT }}
         credentials: ${{ secrets.GCP_CREDENTIALS }}
 
