--- a/.github/workflows/Deploy to Google App Engine.yml
+++ b/.github/workflows/Deploy to Google App Engine.yml
@@ -14,15 +14,19 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+    
+    - uses: actions/checkout@v3
+
+    - id: auth
+      uses: google-github-actions/auth@v1
+      with:
+        credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
     - name: Deploy to App Engine
       id: deploy
       uses: google-github-actions/deploy-appengine@v1.2.6
       with:
         deliverables: app.yaml 
-        version: v1
         project_id: ${{ secrets.GCP_PROJECT }}
         credentials: ${{ secrets.GCP_CREDENTIALS }}
 
